<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_restore_archived"
        android:title="@string/action_restore_archived"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_dark_theme"
        android:title="@string/action_dark_theme"
        android:visible="false"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_pro"
        android:title="@string/action_pro"
        android:orderInCategory="100"
		android:visible="false"
        android:showAsAction="never" />
</menu>
